assets/css/style.css
/*----------------------------------general text and background styling classes---------------------------------------------*/
.grey {
    background-color: #d3d3d3;
}

.text-grey {
    color: #d3d3d3;
}

.text-blue {
    color: rgb(13, 133, 231);
}

.text-red {
    color: red;
}

.text-green {
    color: rgb(25, 196, 25);
}

.text-purple {
    color: purple;
}

.text-orange {
    color: rgb(218, 72, 19);
}

.text-pink {
    color: #f81ba3;
}

.bg-pink {
    background-color: #f81ba3;
}

.bg-green {
    background-color: green;
}

.bg-greenyellow {
    background-color: greenyellow;
}

.bg-black {
    background-color: black;
}

.text-gold {
    color: gold;
}

.text-black {
    color: black;
}

.black-square {
    background-color: black;
}

.grey-square {
    background-color: grey;
}

.white-square {
    background-color: white;
}

.yellow-square {
    background-color: yellow;
}

.orange-square {
    background-color: orange;
}

.pink-square {
    background-color: pink;
}

.invisible-text {
    color: rgba(0, 0, 0, 0.0);
}

.cairo {
    font-family: 'Cairo', sans-serif;
}

.text-medium {
    font-size: 1.25em;
}

.text-big {
    font-size: 1.5em;
}

.hide {
    display: none;
}

/*------------------------------------------------general positioning classes----------------------------------------------*/

.relative {
    position: relative;
}

.absolute {
    position: absolute;
}

.center {
    text-align: center;
}

.margin-auto {
    margin: auto;
}

.min-width {
    min-width: 150px;
}

.margin-top-big {
    margin-top: 20vh;
}

.margin-top-small {
    margin-top: 40px;
}

.margin-top-vsmall {
    margin-top: 20px;
}

.margin-top-medium {
    margin-top: 8vh;
}

.inlineBlock {
    display: inline-block;
}

.block {
    display: block;
}

/*-------------------------------------------------html elements---------------------------------------------------------*/

#container-form {
    text-align: center;
    margin-top: 10vh;
}

#contact-form {
    display: inline-block;
    text-align: left;
    background-color: #54c6f3;
    padding: 20px;
    border-radius: 10px;
    border: solid;
}

.contact-form-items {
    display: block;
    color: #f81ba3;
    background-color: black;
    border-radius: 5px;
    margin-bottom: 10px;
    border: none;
    width: 250px;
    font-family: 'Cairo', sans-serif;
    font-weight: 700;
    font-size: 1.1em;
    padding-left: 10px;
}

.contact-form-items::placeholder {
    color: white;
    opacity: 1;
}

#contact-submit {
    font-family: 'Cairo', sans-serif;
    background-color: black;
    color: white;
    border: none;
    border-radius: 10px;
    font-weight: 700;
    font-size: 1.1em;
    padding-left: 10px;
    padding-right: 10px;
    border: solid black;
}

#contact-submit:hover {
    cursor: pointer;
    background-color: white;
    color: black;
    font-weight: 700;
    border: solid;
}

.squaresMedium { /*targets the individual squares of the minesweeper grid*/
    width: 28px;
    display: inline-block;
    font-size: 20px;
    font-weight: 750;
    border: none;
    user-select: none;
    text-align: center;
    font-family: Arial, Helvetica, sans-serif;
    padding-bottom: 2px;
    padding-top: 4px;
}

.squaresSmall { /*targets the individual squares of the minesweeper grid*/
    width: 25px;
    display: inline-block;
    font-size: 18px;
    font-weight: 750;
    border: none;
    user-select: none;
    text-align: center;
    font-family: Arial, Helvetica, sans-serif;
    padding-bottom: 0;
    padding-top: 4px;
}

.squaresBig { /*targets the individual squares of the minesweeper grid*/
    width: 32px;
    display: inline-block;
    font-size: 22px;
    font-weight: 750;
    border: none;
    user-select: none;
    text-align: center;
    font-family: Arial, Helvetica, sans-serif;
    padding-bottom: 2px;
    padding-top: 4px;
}

header {
    margin-bottom: 10px;
}

#heading-container {
    margin: auto;
    height: 22vh;
    width: 1040px;
    border-bottom: solid 3px;
}

.title-rows {
    height: 9.5%;
}

.title-pixels {
    display: inline-block;
    height: 100%;
    width: 10px;
}

#outer-container {
    text-align: center;
}

#container-game {
    margin: auto;
    text-align: center;
    display: inline-block;
    min-width: 150px;
}

#score-bar {
    position: relative;
    padding-bottom: 6px;
}

.score-bar-bg {
    background-color: hsla(0, 0%, 83%, 0.89);
}

#selector-start {
    display: inline-block;
    left: 4px;
    top: 6px;
}

.selector-start-onload {
    background-color: greenyellow;
    padding-top: 8px;
    height: 50px;
    border-radius: 5px;
    border: solid;
}

#difficulty {
    text-align: left;
    font-weight: 700;
    color: white;
    border-radius: 10px;
}

#difficulty-spelling {
    text-align: left;
    font-weight: 700;
    background-color: black;
    color: yellow;
    border-radius: 10px;
    font-family: 'Cairo', sans-serif;
    font-size: 1em;
    padding-left: 5px;
    padding-right: 5px;
}

#difficulty-container-spelling {
    display: inline-block;
    width: 150px;
    background-color: yellow;
    height: 40px;
    border-radius: 5px;
    margin: auto;
    padding-top: 6px;
    border: solid;
}

#play {
    border: none;
}

#play:hover {
    cursor: pointer;
}

#play-button {
    border:none;
    background-color: yellow;
}

#play-button:hover {
    cursor: pointer;
}

.buttons-spelling {
    border: none;
    font-family: 'Cairo', sans-serif;
    background-color: black;
    color: yellow;
    font-weight: 700;
    font-size: 1.15em;
    border-radius: 10px;
    min-width: 75px;
}

.buttons-spelling:hover {
    color: black;
    background-color: yellow;
    cursor: pointer;
}

#score-container {
    font-family: 'Cairo', sans-serif;
    font-weight: 700;
    color: red;
    display: inline-block;
}

#call-to-play {
    font-family: 'Cairo', sans-serif;
    font-weight: 700;
    font-size: 1.5em;
    color: green;
}

.navigation-container {
    text-align: center;
}

.nav-items {
    text-decoration: none;
    font-family: 'Cairo', sans-serif;
    font-weight: 700;
    color: black;
    margin-right: 20px;
    margin-left: 20px;
    font-size: 1.5em;
    vertical-align: bottom;
}

.nav-items-hover:hover {
    color: #f81ba3;
}

.nav-item-current {
    text-decoration: underline;
    text-decoration-color: #f81ba3;
    text-decoration-thickness: 3px;
}

#answer-box-container {
    width: 400px;
    height: 280px;
    border-radius: 50px;
    background-color: black;
    color: white;
    margin: auto;
    position: relative;
    font-family: 'Press Start 2P', cursive;
    margin-bottom: 10px;
}

#answer-box {
    position: absolute;
    top: 0; bottom: 0; left: 0; right: 0;
    margin: auto;
    height: 20px;
    font-size: 16px;
}

#input-spelling {
    margin-bottom: 10px;
    margin-top: 10px;
}

.play-spelling {
    font-size: 1.35em;
}

#input-two {
    background-color: yellow;
    border-radius: 5px;
    border: solid;
    font-family: 'Cairo', sans-serif;
    font-weight: 700;
    font-size: 1em;
    padding-left: 5px;
}

.flagCotainers {
    margin-left: 50px;
    margin-right: 50px;
}

.flagContainersOuter {
    position: relative;
    min-height: 150px;
    min-width: 180px;
}

.flagInputs {
    width: 100px;
    position: absolute;
    left: 22.5%;
}

.playFlagsInitial {
    border: none;
    width: 10vmax;
    height: 10vmax;
    border-radius: 50%;
    font-size: 5em;
    color: green;
    background-color: rgb(54, 68, 228);
    padding-left: 1.5%;
    padding-top: 0.5%;
}

.playFlagsSubsequent {
    background-color: red;
}

#flagsDisplayBox {
    font-family: 'Cairo', sans-serif;
    font-weight: 700;
    font-size: 1.4em;
}

.scoreSmileys {
    font-size: 1.5em;
}

.answerDiv, .inputContainer {
    height: 15px;
}

.inputContainer {
    text-align: center;
}


/*-------------------------------target "every other" square to create a checkerboard effect-------------------------------*/
.even-squares { 
    background-color: rgb(21, 199, 21);
    color: rgba(0, 0, 0, 0.0);
}

.odd-squares {
    background-color: rgb(119, 236, 10);
    color: rgba(0, 0, 0, 0.0);
}
/*-------------------------------------------------------------------------------------------------------------------------*/

.selected {/*targets squares left-clicked by the user and effectively "dealt with"*/
    background-color: #d3d3d3;
}

.hovered-squares:hover {/*creates a highlight while hovered effect on active squares (ie not selected)*/
    background-color: rgb(134, 211, 18);
    color: rgb(134, 211, 18);    
}

.flagged {/*makes the flag icon that marks mines red*/
    color: red;
    background-color: #d3d3d3;
}

/*----------------------------------------------------------------MEDIA QUERIES---------------------------------------------------------*/

@media screen and (max-width: 550px) {
    .title-pixels {
        width: 3px;
    }

    #heading-container {
        width: 100%;
        height: 12vh;
        border-bottom: none;
    }

    .title-rows {
        height: 10%;
    }

    .navigation-container {
        display: none;
    }

    .contact-form-items {
        display: block;
        color: #f81ba3;
        background-color: black;
        border-radius: 5px;
        margin-bottom: 5px;
        border: none;
        width: 180px;
        font-family: 'Cairo', sans-serif;
        font-weight: 400;
        padding-left: 10px;
        font-size: 1em;
    }

    #navigation-bar-mobile {
        text-align: center;
    }

    #title-row0 {
        display: none;
    }

    #title-row9 {
        display: none;
    }

    .squaresMedium {
        width: 22px;
        font-size: 15px;
    }

    .squaresSmall {
        width: 16px;
        font-size: 14px;
        padding-top: 2px;
    }

    #answer-box-container {
        width: 320px;
        height: 240px;
    }
    .header-spelling {
        margin-bottom: 10vh;
    }
  }

@media screen and (min-width: 551px) {

    .navigation-container-mobile {
        display: none;
    }
    #navigation-bar-mobile {
        display: none;
    }  
}
@media screen and (min-width: 551px) and (max-width: 1050px) {

    #heading-container {
        width: 100%;
    }
}

@media screen and (min-width: 700px) and (max-width: 1000px) {
    .title-pixels {
        width: 7px;
    }
    #heading-container {
        width: 100%;
    }
    .header-spelling {
        margin-bottom: 8vh;
    }
}

@media screen and (min-width: 1000px) and (max-width: 1200px) and (min-height: 1200px ) {
    .nav-items {
        font-size: 2em;
    }

    .contact-form-items {
        width: 400px;
        font-size: 1.5em;
    }

    #contact-submit {
        font-size: 1.5em;
    }
    .squaresMedium {
        width: 40px;
        font-size: 32px;
    }
    .squaresSmall {
        width: 40px;
        font-size: 32px;
    }
    .squaresBig {
        width: 40px;
        font-size: 30px;
    }
    .margin-top-small {
        margin-top: 100px;
    }
    #difficulty {
        font-size: 1.2em;
    }
    #play {
        font-size: 1.2em;
    }
    #flag-container {
        font-size: 1.2em;
    }
    #score-container {
        font-size: 1.2em;
    }
    .header-spelling {
        margin-bottom: 10vh;
    }
    #answer-box-container {
        width: 480px;
        height: 360px;
    }
}
  
@media screen and (max-width: 320px) {
    .squaresMedium {
        width: 20px;
    }
    .squaresSmall {
        width: 15px;
        padding-top: 1px;
    }
    .margin-top-small {
        margin-top: 20px;
    }
    #answer-box-container {
        width: 300px;
        height: 210px;
    }
    .header-spelling {
        margin-bottom: 8vh;
    }
    
}

